SQL_Server_Database_on_RDS/internet_gateway.tf

resource "aws_internet_gateway" "igw_main" {
  vpc_id = aws_vpc.main.id
  tags = {
    Name = "Main-IGW"
  }
}
